# nexir-mvcc-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml
benches/: core_bench.rs  perf_truth.rs
docs/: ADAPTER_CONTRACT.md  BATCH_WRITE_SET_DESIGN.md  BENCHMARKING.md  CONFLICT_SEMANTICS.md  HISTORY_RETENTION_AND_GC.md  MVCC_DESIGN.md  README.md  TESTING.md
examples/: abort_replay.rs  command_load_sim.rs  direct_set.rs  guarded_incr.rs  multi_key_intent_txn.rs
src/: backend.rs  codec.rs  conformance.rs  engine.rs  error.rs  lib.rs  types.rs
tests/: batch_intent_tests.rs  batch_tests.rs  codec_tests.rs  conformance_tests.rs  failure_tests.rs  gc_tests.rs  integration_tests.rs  key_gc_planner_contract_tests.rs  model_tests.rs  no_atomic_metrics_tests.rs  property_tests.proptest-regressions  property_tests.rs
tests/support/: model.rs
