[package]
name = "nexir-mvcc-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["Nexir Team"]
description = "Standalone, deterministic Multi-Version Concurrency Control (MVCC) library for building durable databases"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nexirdb/nexir-mvcc-core"
homepage = "https://nexir.com"
readme = "README.md"
documentation = "https://docs.rs/nexir-mvcc-core"
keywords = ["mvcc", "database", "concurrency", "storage"]
categories = ["database", "concurrency", "data-structures"]
exclude = ["Cargo.toml.orig"]

[features]
default = []
conformance = []

[dependencies]
thiserror = "1.0"
bytes = "1.5"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "core_bench"
harness = false

[[bench]]
name = "perf_truth"
harness = false
